Fix for scroll issue on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@
 /* Shopping Basket */
 
 .shopping-basket-background {
-  height: 100%;
+  height: 150%;
   width: 100%;
   z-index: 1;
   background-color: black;
